Add prices to swagger
